[package]
name = "dotedit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
pagurus = { version = "0.7.0", features = ["image"] }
pagurus_tui = "0.7.0"
png = "0.17.9"
serde = { version = "1.0.182", features = ["derive"] }
serde_json = "1.0.104"
