[package]
name = "pati"
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Canvas data structure for the Patica editor"
homepage = "https://github.com/sile/patica"
repository = "https://github.com/sile/patica"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.182", features = ["derive"] }
serde_json = "1.0.104"
